--- a/src/04_harjoitus_4.rmd
+++ b/src/04_harjoitus_4.rmd
@@ -81,7 +81,7 @@ Katso esimerkkiasetukset kuvasta:
 ![](img/harjoitus_4/image13.png)
 
 Nyt nimiöt seuraavat viivoja paremmin. Huomaa myös, että kaikki nimiöt eivät nyt tule piirretyksi. Vaihda **Maksimikulma kaarevien merkkien välillä -kohdan** arvoja, niin pystyt muokkaamaan tekstin kaarevuuden reunaehtoja. Voit sulkea **Ominaisuudet-ikkunan** totuttuun tapaan painamalla **OK**.
-Rastita vielä päälle **Yhdistä kytketyt viivat** välttääksesi kopioidut nimiöt (tämä löytyy Piirtäminen-alateeman Kohteen valinnat -kohdan alta).
+Rastita vielä päälle **Yhdistä kytketyt viivat** välttääksesi kopioidut nimiöt (tämä löytyy Karttanäyttö-alateeman Kohteen valinnat -kohdan alta).
 
 ![](img/harjoitus_4/image2.png)
 
