Harjoitus 2 image7.gif ja image9.gif korjaus 2

--- a/src/02_harjoitus_2.Rmd
+++ b/src/02_harjoitus_2.Rmd
@@ -48,7 +48,7 @@ Seuraavaksi lisäämme QGISiin WFS (Web Feature Service) -palveluja käyttöömm
 
 WFS-palvelujen yhdistäminen toimii samalla logiikalla kuin edellä määritellyt WMS-palvelut.
 
-Lisää taas muutama WFS-palvelu ja nimeä ne haluamallasi tavalla. Jos et vielä avannut mainittua Gispon ylläpitämää WMS- ja WFS-rajapintojen listaa verkosta, avaa se nyt ja hae sieltä haluamasi WFS-palvelun URL tai lisää seuraavasta listasta WFS-palveluita:
+Lisää taas muutama WFS-palvelu ja nimeä ne haluamallasi tavalla. Jos et vielä avannut mainittua Gispon ylläpitämää WMS- ja WFS-rajapintojen listaa verkosta, avaa se nyt. Hae sieltä haluamasi WFS-palvelun URL tai lisää seuraavasta listasta WFS-palveluita:
 
 -   <https://kartta.hel.fi/ws/geoserver/avoindata/wfs>
 -   <http://lipas.cc.jyu.fi/geoserver/lipas/ows>?
