--- a/src/01_harjoitus_1.Rmd
+++ b/src/01_harjoitus_1.Rmd
@@ -42,7 +42,7 @@ Kurssilla tarvittavat paikkatieto-aineistot on ladattavissa Google
 Drivestä linkistä
 
 ::: note-box
-[Kurssihakemisto.zip](https://drive.google.com/file/d/141J1hHF4KfN9XVv3SJn93cTv1_QZMo5p/view?usp=sharing)
+[Kurssihakemisto.zip](https://drive.google.com/uc?export=download&id=1CT7QhQCvI9gu9fIIE9NFx1mYe2qn6Xw_)
 :::
 
 Avaa yllä oleva linkki ja klikkaa **Lataa**. Tämä lataa aineistot
