--- a/src/03_harjoitus_3.Rmd
+++ b/src/03_harjoitus_3.Rmd
@@ -20,28 +20,25 @@ Lisää projektiin seuraavat aineistot:
 
 -   **.../Harjoitus 3/Kaupungit.shp**
 
-
 ## Vektoriaineistojen visualisointi
 
-Aloita tutkimalla Kaupungit -tasoa, joka sisältää Natural Earth kaupunkiaineiston Suomesta. Jos et näe pisteitä kartallasi vedä taso muiden tasojen päälle painamalla hiiren vasenta painiketta ja raahaa taso ylimmäksi listauksessa. Paina hiiren oikealla painikkeella tason nimeä (Kaupungit) tasoluettelossa. Valitse valikosta **Ominaisuudet**:
+Aloita tutkimalla Kaupungit -tasoa, joka sisältää Natural Earth kaupunkiaineiston Suomesta. Jos et näe pisteitä kartallasi, vedä taso muiden tasojen päälle painamalla hiiren vasenta painiketta ja raahaa taso ylimmäksi listauksessa. Paina hiiren oikealla painikkeella tason nimeä (Kaupungit) tasoluettelossa. Valitse valikosta **Ominaisuudet**:
 
 ![](img/harjoitus_3/image4.png)
 
-**Tason ominaisuudet** -ikkuna aukeaa. Huomaa vasemmalla oleva sivupalkki, josta löytyy eri ominaisuudet jaoteltuna aihekohtaisesti. Samaisessa sivupalkissa on **Kuvaustekniikka-alamenu**, jonka valittuasi pääset muokkaamaan tason tyyliominaisuuksia:
+**Tason ominaisuudet** -ikkuna aukeaa. Huomaa vasemmalla oleva sivupalkki, josta löytyy eri ominaisuudet jaoteltuna aihekohtaisesti. Samaisessa sivupalkissa on **Kuvaustekniikka-alavalikko**, jonka valittuasi pääset muokkaamaan tason tyyliominaisuuksia:
 
 ![](img/harjoitus_3/image_20.png){width="70%"}
 
 Vaihda **Väri- ja koko-arvot**, ja paina **Käytä**. Sillä tavalla saat näkyviin tekemäsi muutokset sulkematta **Tason ominaisuudet -ikkunaa**. Avaa vielä jokin **symbolikirjasto**, esimerkiksi **Suosikit**, ja muuta pisteen tyyliksi jokin sinua miellyttävä tyyli. Voit myös kiertää symbolia vaihtamalla **kierto-arvon** astelukua. Paina sitten **OK**, ikkuna sulkeutuu ja kaupunkitaso näkyy nyt määrittämäsi visualisointityylin tavalla.
 
-Saat avattua edistyneet visualisointiasetukset painamalla **Yksinkertainen pistesymboli** valintaa. Täältä saat muokattua symbolin lisäksi esimerkiksi reunojen väriä, paksuutta sekä viivan tyyliä. Voit myös poistaa ääriviivat tai symbolin värityksen kokonaan jättäen vain ääriviivat. 
-Muut paikkatietoaineistojen visualisoinnin työkalut saa käyttöön samalla tavalla, avaamalla hiiren oikealla **Ominaisuudet** ja sivupalkista **Kuvaustekniikka**. Klikkaamalla sivellintä Tasot-paneelin yläreunasta tai pikanäppäimellä **F7** saat avatuksi **Tason tyylit -ikkunan**, joka on jatkuvasti avoinna karttaikkunan oikeassa laidassa. Tällöin voit helposti vaihtaa kaikkien tasojen kuvaustekniikkaa ja näet heti, miltä uusi tyyli näyttää.
-Eri vektoriaineistotyypeillä (piste, viiva, monikulmio) on erilaiset kuvaustekniikan työkalut, vaikkakin ne muistuttavat paljon toisiaan. Esimerkiksi pistetasolle ei voida tehdä samoja tyylittelyjä kuin viiva- tai monikulmiotasolle. Rasteriaineistojen työkalut taas eroavat melko paljon vektoriaineistojen työkaluista.
+Saat avattua edistyneet visualisointiasetukset painamalla **Yksinkertainen pistesymboli** valintaa. Täältä saat muokattua symbolin lisäksi esimerkiksi reunojen väriä, paksuutta sekä viivan tyyliä. Voit myös poistaa ääriviivat tai symbolin värityksen kokonaan jättäen vain ääriviivat. Muut paikkatietoaineistojen visualisoinnin työkalut saa käyttöön samalla tavalla, avaamalla hiiren oikealla **Ominaisuudet** ja sivupalkista **Kuvaustekniikka**. Klikkaamalla sivellintä Tasot-paneelin yläreunasta tai pikanäppäimellä **F7** saat avatuksi **Tason tyylit -ikkunan**, joka on jatkuvasti avoinna karttaikkunan oikeassa laidassa. Tällöin voit helposti vaihtaa kaikkien tasojen kuvaustekniikkaa ja näet heti, miltä uusi tyyli näyttää.
 
+Eri vektoriaineistotyypeillä (piste, viiva, monikulmio) on erilaiset kuvaustekniikan työkalut, vaikkakin ne muistuttavat paljon toisiaan. Esimerkiksi pistetasolle ei voida tehdä samoja tyylittelyjä kuin viiva- tai monikulmiotasolle. Rasteriaineistojen työkalut taas eroavat melko paljon vektoriaineistojen työkaluista.
 
 ## Viiva- ja monikulmioaineiston visualisointi
 
-Kokeile nyt itse muokata viiva- ja monikulmioaineistoja haluamaksesi.
-Avaa aiemmin lisätty tiestötason kuvaustekniikkaikkuna samalla tavalla kuin äsken pistetason yhteydessä. Huomaa erot viiva- ja pistetason kuvaustekniikan määrittelyissä:
+Kokeile nyt itse muokata viiva- ja monikulmioaineistoja haluamaksesi. Avaa aiemmin lisätty tiestötason kuvaustekniikkaikkuna samalla tavalla kuin äsken pistetason yhteydessä. Huomaa erot viiva- ja pistetason kuvaustekniikan määrittelyissä:
 
 ![](img/harjoitus_3/image12.png){width="70%"}
 
@@ -55,15 +52,13 @@ Saattaa olla, että aineistotasot peittävät toisensa vaikka siten, että monik
 
 Voit myös piilottaa tai näyttää tasoja painamalla tason nimen vasemmalla puolella olevaa ruutua.
 
-
 ## Lisätehtävä: Monikulmioaineiston edistynyt visualisointi
 
-Visualisointeihin voi tehdä myös useampia tasoja monipuolisemman kuvaustekniikan saavuttamiseksi. Muokataan **NaturaKohde**-aineiston visualisointia. Tavoitteena on saada kutakuinkin tällainen visualisointi tasolle: 
+Visualisointeihin voi tehdä myös useampia tasoja monipuolisemman kuvaustekniikan saavuttamiseksi. Muokataan **NaturaKohde**-aineiston visualisointia. Tavoitteena on saada kutakuinkin tällainen visualisointi tasolle:
 
 ![](img/harjoitus_3/image_24.png)
 
-
-Ensimmäiseksi muutamme vektoriaineiston väriä. Avaa tason **Ominaisuudet → Kuvaustekniikka** ja klikkaa **Väri-kohdassa** olevaa väripalkkia. Valitse haluamasi väri vektoriaineistolle. Huomaa, että voit määritellä värit arvo **HSV-** (Hue, Saturation, Value) tai **RGB-arvoilla** (Red, Green, Blue). **Peittävyys-arvolla** säädät värin läpinäkyvyyttä. Kokeile myös **Värikarttaa**, **Väripyörää** ja **Liukuväri** (välilehdet). Valittuasi sopivan värin, paina **OK**. Paina sen jälkeen **Ominaisuudet-ikkunasta Käytä**. 
+Ensimmäiseksi muutamme vektoriaineiston väriä. Avaa tason **Ominaisuudet → Kuvaustekniikka** ja klikkaa **Väri-kohdassa** olevaa väripalkkia. Valitse haluamasi väri vektoriaineistolle. Huomaa, että voit määritellä värit arvo **HSV-** (Hue, Saturation, Value) tai **RGB-arvoilla** (Red, Green, Blue). **Peittävyys-arvolla** säädät värin läpinäkyvyyttä. Kokeile myös **Värikarttaa**, **Väripyörää** ja **Liukuväriä** (välilehdet). Valittuasi sopivan värin, paina **OK**. Paina sen jälkeen **Ominaisuudet-ikkunasta Käytä**.
 
 ![](img/harjoitus_3/image5.png){width="70%"}
 
@@ -76,8 +71,6 @@ Voit muokata viivoituksen kiertoa, jaottelua ja siirtymää **Täyttö viivakuos
 ![](img/harjoitus_3/image_26.png){width="70%"}
 
 Muuta vielä aineiston reunaviiva katkoviivaksi kohdasta **Piirron tyyli**. Viivan paksuudeksi voit määritellä 0,8 millimetriä. Lopuksi voit vielä määritellä **Tason piirto -kohdasta** (valikko aukeaa pientä nuolta klikkaamalla) **Peittävyys-kohtaan** arvoksi 70%.
-
-
 
 ::: hint-box
 **Psst! Muista tallentaa QGIS-projekti harjoituksen lopuksi.**
